weather-app Testing Commit

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     </section>
     <section class="controls">
       <h2>Controls</h2>
-      <button id="fetch-weather">Fetch Weather</button>
-      <button id="clear-weather">Clear Weather</button>
+    <input type="text" id="city-input" placeholder="Enter city">
+    <button id="fetch-weather-btn">Get Weather</button>
+    
+
     </section>
 
-    <script src="scripts/weather.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
