--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       This is a simple weather application that fetches and displays weather
       data.
     </p>
+    <p>
+        Enter a city name to get the current weather information. The app uses
+        the OpenWeatherMap API to fetch weather data.
+    </p>
 
     <section class="weather-info">
       <h2>Current Weather</h2>
