changing from class to id

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         the OpenWeatherMap API to fetch weather data.
     </p>
 
-    <section class="weather-info">
+    <section id="weather-info">
       <h2>Current Weather</h2>
       <div id="weather-display">
         <!-- Weather data will be displayed here -->
