--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>
         Enter a city name to get the current weather information. The app uses
         the OpenWeatherMap API to fetch weather data.
+        Version 1.3
     </p>
 
     <section id="weather-info">
