more style and netlify

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Weather App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Weather App</h1>
@@ -13,9 +13,8 @@
       data.
     </p>
     <p>
-        Enter a city name to get the current weather information. The app uses
-        the OpenWeatherMap API to fetch weather data.
-        Version 1.3
+      Enter a city name to get the current weather information. The app uses the
+      OpenWeatherMap API to fetch weather data. Version 1.6
     </p>
 
     <section id="weather-info">
@@ -26,10 +25,8 @@
     </section>
     <section class="controls">
       <h2>Controls</h2>
-    <input type="text" id="city-input" placeholder="Enter city">
-    <button id="fetch-weather-btn">Get Weather</button>
-    
-
+      <input type="text" id="city-input" placeholder="Enter city" />
+      <button id="fetch-weather-btn">Get Weather</button>
     </section>
 
     <script src="script.js"></script>
